# relationship-substrate

./: .gitignore  README.md  pyproject.toml
docs/: ASK_NETWORK_CONTRACT.md  COMPLETION_PLAN.md  NON_UI_END_TO_END_PLAN.md  NORTH_STAR.md  SOURCE_MODULE_SPEC.md  WORKGRAPH_DAEMON_DISPATCH.md
migrations/: 001_initial.sql  002_variable_embedding_dimensions.sql  003_research_snapshots.sql  004_network_packets.sql  005_network_feedback.sql  006_person_notes.sql  007_identity_candidate_lookup.sql  007_subject_notes.sql
relationship_substrate/: cli.py  config.py  contact_hygiene.py  contracts.py  db.py  dossiers.py  embeddings.py  freshness.py  identity.py  materialize.py  model_registry.py  network_ask.py  network_feedback.py  network_packets.py  operations.py  organizations.py  outreach.py  person_notes.py  read_models.py  relationship_intelligence.py  relationship_strength_workers.py  repositories.py  research.py  research_workers.py  search.py  self_identity.py  subject_notes.py  tone_tenor_workers.py
tests/: conftest.py  test_agent_cli_workflow.py  test_calendar_adapter.py  test_calendar_materialization.py  test_contracts.py  test_db_migrations.py  test_embeddings.py  test_freshness.py  test_identity_candidates.py  test_job_defaults.py  test_materialize.py  test_msgvault_adapter.py  test_msgvault_sender_materialization.py  test_network_ask.py  test_network_feedback.py  test_network_packets.py  test_network_search.py  test_next_up_adapter.py  test_operations.py  test_organization_enrichment.py  test_outreach_proposals.py  test_person_dossier.py  test_person_notes.py  (+9 more)
(+16 files in other folders)
