[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relationship-substrate"
version = "0.1.0"
description = "Event-first relationship intelligence substrate for local network evidence."
requires-python = ">=3.14"
dependencies = [
  "openpyxl>=3.1.5",
  "psycopg[binary]>=3.2.13",
  "pydantic>=2.12.0",
]

[project.scripts]
relationship-substrate = "relationship_substrate.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
